     Meteor Lake, Den of Onis, Smallolof, Castle Hopping Isle, Hornshark Island
   * updated multiplayer map cfg files: Clash, Hexcake, Smallolof
   * fixed gamelist diff bug
   * renamed "Across The River" config file to improve display order
   * renamed "Across The River" map to "Across the River"
   * made "Load Game ..." first map option (was last), for better visibility
 * campaign server
   * support new "timestamp" attribute
   * save persistent attributes in the campaign data
     * "name" is treated as directory name, so use campaign_name (#4525)
     * SECURITY: ensure file and directory names on upload match campaign name
   * support filtering on campaign_list requests: name, last update time
     (before or after), language of translation
   * campaign_list response now contains the time the request was processed
   * campaign_list response now contains information about translations
   * fixed problem with duplicate translations being saved with each upload
   * added a passphrass change function
   * deleting campaigns, campaign file is now deleted, not reduced to zero size
 * utils
   * added weblist.pl and webtgz.pl web interface programs
   * changed wml.pm to use substr instead of split to convert string to array:
     saves about half memory usage for large strings
   * changed wml_net.pm to insert into preallocated string instead of
     appending: should save memory and time, but not benchmarked
   * added prkill script, to calculate probabilities to kill in a skirmish
   * added campaign_passphrase.pl for changing passphrases
   * added campaign_delete.pl for deleting campaigns
 * WML improvements:
   * random map generator now uses island_size (#4458)
   * fixed incorrect savefile name after continue_no_save (#4439)
   * fix bad leader starting position causing crash
   * tighten up checks on leaders and units placed on map at start of scenario
   * add a backup save_id to use if both save_id and description are empty